chore: Updated dependecies
Dropped guava. Explicitly added DKPro and others, that were only implicit dependencies.